添加markdown格式解析

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,13 @@
         </div>
     </section>
 
+    <section class="articles">
+        <h2>Articles</h2>
+        <ul id="articles">
+            <!-- Articles will be loaded here by JavaScript -->
+        </ul>
+    </section>
+
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             // 检查是否为管理员
