--- a/public/article.html
+++ b/public/article.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- 引入 Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <title>文章详情</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="article.css">
@@ -20,5 +22,12 @@
     
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="article.js"></script>
+    <!-- 引入 Prism.js 的 CSS 主题 -->
+    <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.28.0/themes/prism-okaidia.min.css" rel="stylesheet" /> -->
+
+    <!-- 引入 Prism.js -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.28.0/prism.min.js"></script> -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.28.0/components/prism-javascript.min.js"></script> 根据需求加载其他语言的支持 -->
+
 </body>
 </html>
