--- a/public/index.html
+++ b/public/index.html
@@ -10,18 +10,19 @@
     <header>
         <div class="profile">
             <img src="/assets/avatar.jpg" alt="头像" class="avatar">
-            <h1>Jialiang Xin</h1>
-            <p>Hello! I'm Jialiang Xin, a Unity Programmer with a vibrant two-year journey in 2D and 3D game development. My passion for creating engaging game experiences is matched by my proficiency in crafting neat, maintainable C# code and a deep familiarity with the Unity engine. These skills enable me to tackle the dynamic challenges of game development with confidence and creativity.</p>
-            <div class="social-links">
-                <a href="https://www.linkedin.com/in/jialiang-xin-0b496a263/" target="_blank">Linkdle</a> |
-                <a href="https://github.com/x739809514" target="_blank">GitHub</a>
+            <div class="profile-content">
+                <h1>Jialiang Xin</h1>
+                <p>Hello! I'm Jialiang Xin, a Unity Programmer with a vibrant two-year journey in 2D and 3D game development. My passion for creating engaging game experiences is matched by my proficiency in crafting neat, maintainable C# code and a deep familiarity with the Unity engine. These skills enable me to tackle the dynamic challenges of game development with confidence and creativity.</p>
+                <div class="social-links">
+                    <a href="https://www.linkedin.com/in/jialiang-xin-0b496a263/" target="_blank">LinkedIn</a> |
+                    <a href="https://github.com/x739809514" target="_blank">GitHub</a>
+                </div>
+                <button id="auth-btn" class="btn">管理员登录</button>
+                <button id="upload-btn" class="btn" style="display:none;">上传新作品</button>
             </div>
-            <!-- 登录/登出按钮 -->
-            <button id="auth-btn" class="btn">管理员登录</button>
-            <!-- 上传按钮，只对管理员可见 -->
-            <button id="upload-btn" class="btn" style="display:none;">上传新作品</button>
         </div>
     </header>
+    
 
     <section class="gallery">
         <h2>Portofolio</h2>
