--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="profile">
-            <img src="/assets/avatar.jpg" alt="头像" class="avatar">
+            <img src="/assets/avatar.png" class="avatar">
             <div class="profile-content">
                 <h1>Jialiang Xin</h1>
                 <p>Hello! I'm Jialiang Xin, a Unity Programmer with a vibrant two-year journey in 2D and 3D game development. My passion for creating engaging game experiences is matched by my proficiency in crafting neat, maintainable C# code and a deep familiarity with the Unity engine. These skills enable me to tackle the dynamic challenges of game development with confidence and creativity.</p>
