丰富作品集

--- a/public/details.html
+++ b/public/details.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <div class="profile">
+        <div class="article-title">
             <h1 id="project-title">作品标题</h1>
         </div>
     </header>
